<resources>
    <string name="app_name">Mali Pomocnik</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="e_mail">E-mail</string>
    <string name="username_register">Username</string>
    <string name="password_register">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_here">Don´t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>