<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ozadje1"
    tools:context=".Signin">

    <TextView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15mm"
        android:layout_marginTop="15mm"
        android:layout_marginEnd="15mm"
        android:layout_marginBottom="15mm"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="5mm"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="30dp"
        android:background="@color/pink"
        android:drawablePadding="20dp"
        android:hint="@string/full_name"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullname"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@color/pink"
        android:drawablePadding="20dp"
        android:hint="@string/e_mail"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@color/pink"
        android:drawablePadding="20dp"
        android:hint="@string/username_register"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@color/pink"
        android:drawablePadding="20dp"
        android:hint="@string/password_register"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />


    <Button
        android:id="@+id/registerbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_register"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/pink"
        android:text="REGISTER"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/alreadyhavetext"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/registerbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/pink"
        android:text="@string/already_have_an_account" />


</RelativeLayout>