<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ozadje1"
    tools:context=".Login">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15mm"
        android:layout_marginTop="15mm"
        android:layout_marginEnd="15mm"
        android:layout_marginBottom="15mm"
        android:text="Login"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="5mm"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/pink"
        android:drawablePadding="20dp"
        android:hint="@string/e_mail"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLogin"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="31dp"
        android:layout_marginRight="20dp"
        android:background="@color/pink"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/pink"
        android:text="LOGIN" />

    <Button
        android:id="@+id/signuptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="#f3cee9"
        android:text="@string/sign_up_here" />


</RelativeLayout>